adicionei um pargrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>olá, mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, quasi? Hic officia cumque odit blanditiis nemo eius culpa omnis maiores minima repudiandae ut, temporibus, cupiditate deleniti optio sequi id sunt.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestias pariatur minima nihil quidem. Fugit autem recusandae ducimus, beatae corporis quam officiis libero alias blanditiis ipsa earum inventore fuga. Veniam.</p>
 </body>
 </html>
